syntax = "proto3";

option java_package = "ie.app.minimap.data.proto";
option java_multiple_files = true;

message VendorProto {
  int64 id = 1;
  int64 venue_id = 2;
  string name = 3;
  string description = 4;
  string category = 5;
  string contact_info = 6;
  string logo_url = 7;
  int64 created_at = 8;
}
